*SVN*

* Allow action_web_service to handle various HTTP methods including GET. Closes #7011. [zackchandler]

* Ensure that DispatcherError is being thrown when a malformed request is received. [Kent Sibilev]

* Added support for decimal types. Closes #6676. [Kent Sibilev]

* Removed deprecated end_form_tag helper. [Kent Sibilev]

* Removed deprecated @request and @response usages. [Kent Sibilev]

* Removed invocation of deprecated before_action and around_action filter methods. Corresponding before_invocation and after_invocation methods should be used instead. #6275 [Kent Sibilev]

* Provide access to the underlying SOAP driver. #6212 [bmilekic, Kent Sibilev]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* ActionWebService WSDL generation ignores HTTP_X_FORWARDED_HOST [Paul Butcher <paul@paulbutcher.com>]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Fixed XMLRPC multicall when one of the called methods returns a struct object. [Kent Sibilev] 

* Replace Reloadable with Reloadable::Deprecated. [Nicholas Seckar]

* Fix invoke_layered since api_method didn't declare :expects. Closes #4720. [Kevin Ballard <kevin@sb.org>, Kent Sibilev]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Fix test database name typo. [Marcel Molina Jr.]

*1.1.2* (April 9th, 2006)

* Rely on Active Record 1.14.2


*1.1.1* (April 6th, 2006)

* Do not convert driver options to strings (#4499)


*1.1.0* (March 27th, 2006)

* Make ActiveWebService::Struct type reloadable

* Fix scaffolding action when one of the members of a structural type has date or time type

* Remove extra index hash when generating scaffold html for parameters of structural type #4374 [joe@mjg2.com]

* Fix Scaffold Fails with Struct as a Parameter #4363 [joe@mjg2.com]

* Fix soap type registration of multidimensional arrays (#4232)
